per instrument and per metric

--- a/FIC/mss_table.ipynb
+++ b/FIC/mss_table.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "058b1989-15b7-4300-9d6c-680d44ee5739",
    "metadata": {},
    "outputs": [
@@ -166,13 +166,179 @@
        "danjacobellis/LSDIR_demucs_10xRR       4.969634         4.236443  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f2dc4e9d-a053-4b0d-9c34-df32113a0717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = ['SSDR', 'SRDR', 'PSNR', 'CDPAM_dB']\n",
+    "instruments = ['other', 'drums', 'bass', 'vocals']\n",
+    "df_instrument = pd.DataFrame(index=results_df.index)\n",
+    "for instrument in instruments:\n",
+    "    cols = [f\"{metric}_{instrument}\" for metric in metrics]\n",
+    "    df_instrument[instrument] = results_df[cols].product(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e615b2fe-795a-432f-802b-39975b68b9bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>other</th>\n",
+       "      <th>drums</th>\n",
+       "      <th>bass</th>\n",
+       "      <th>vocals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>danjacobellis/LSDIR_demucs_2xRR</th>\n",
+       "      <td>15171.873512</td>\n",
+       "      <td>26336.027459</td>\n",
+       "      <td>26369.405686</td>\n",
+       "      <td>13533.383441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>danjacobellis/LSDIR_demucs_10xRR</th>\n",
+       "      <td>5504.758626</td>\n",
+       "      <td>15105.664626</td>\n",
+       "      <td>19523.043408</td>\n",
+       "      <td>1235.364321</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         other         drums          bass  \\\n",
+       "danjacobellis/LSDIR_demucs_2xRR   15171.873512  26336.027459  26369.405686   \n",
+       "danjacobellis/LSDIR_demucs_10xRR   5504.758626  15105.664626  19523.043408   \n",
+       "\n",
+       "                                        vocals  \n",
+       "danjacobellis/LSDIR_demucs_2xRR   13533.383441  \n",
+       "danjacobellis/LSDIR_demucs_10xRR   1235.364321  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_instrument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3c0ef4e0-d848-491d-9a90-971d13d8f367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_metrics = pd.DataFrame(index=results_df.index)\n",
+    "for metric in metrics:\n",
+    "    cols = [f\"{metric}_{instrument}\" for instrument in instruments]\n",
+    "    df_metrics[metric] = results_df[cols].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "31829649-b09d-4063-93e3-7af13fa90b16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SSDR</th>\n",
+       "      <th>SRDR</th>\n",
+       "      <th>PSNR</th>\n",
+       "      <th>CDPAM_dB</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>danjacobellis/LSDIR_demucs_2xRR</th>\n",
+       "      <td>15.564542</td>\n",
+       "      <td>6.776645</td>\n",
+       "      <td>39.721565</td>\n",
+       "      <td>4.750957</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>danjacobellis/LSDIR_demucs_10xRR</th>\n",
+       "      <td>12.446308</td>\n",
+       "      <td>4.174739</td>\n",
+       "      <td>37.288949</td>\n",
+       "      <td>4.421633</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       SSDR      SRDR       PSNR  CDPAM_dB\n",
+       "danjacobellis/LSDIR_demucs_2xRR   15.564542  6.776645  39.721565  4.750957\n",
+       "danjacobellis/LSDIR_demucs_10xRR  12.446308  4.174739  37.288949  4.421633"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_metrics"
    ]
   }
  ],
