--- a/FIC/paligemma_docvqa.ipynb
+++ b/FIC/paligemma_docvqa.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5a0a73a37fd4983af715abf83c5731e",
+       "model_id": "0f35fde6c7e1496486d158bc5c5f5047",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "739c52b76e764b93b1876f5ec368088b",
+       "model_id": "bf59db3df8294631b7323323f24192f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d29f578cda94405ad33039adf5f660f",
+       "model_id": "f01fa131d1c8426cb29289f0e64864e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +104,6 @@
     "def compute_score(item,res):\n",
     "    prompt = item['question']\n",
     "    image = item['image'].resize((res, res), resample=Image.Resampling.LANCZOS).convert(\"RGB\")\n",
-    "    image = image.resize((896, 896), resample=Image.Resampling.LANCZOS)\n",
     "    model_inputs = processor(text=prompt, images=image, return_tensors=\"pt\").to(model.device)\n",
     "    input_len = model_inputs[\"input_ids\"].shape[-1]\n",
     "    with torch.inference_mode():\n",
@@ -117,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bf90fe72-b4cd-4c64-99f0-9296c2b0b06e",
    "metadata": {},
    "outputs": [
@@ -154,7 +153,7 @@
        "\n",
        "    <div>\n",
        "      <progress value='5188' class='' max='5188' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [5188/5188 07:56&lt;00:00]\n",
+       "      100.00% [5188/5188 07:07&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -164,6 +163,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dgj335/.local/lib/python3.10/site-packages/anls_star/anls_star.py:513: UserWarning: Treating ground truth as a list of options. This is a compatibility mode for ST-VQA-like datasets.\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -190,23 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e98d3fd0-7de6-43c7-bbfb-f3a35314b2cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10.899159663865547"
+       "12.149882903981265"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5188 / (7*60+56)"
+    "5188 / (7*60+7)"
    ]
   },
   {
