stable diffusion 3 full precision

--- a/FIC/pred_to_json.ipynb
+++ b/FIC/pred_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "e8f64a74-c3f5-41d0-bb26-2c9c53104835",
    "metadata": {},
    "outputs": [],
@@ -434,6 +434,43 @@
     "for rr in ['4x', '16x']:\n",
     "    scores = []\n",
     "    with open(f\"walloc_{rr}.csv\", 'r') as file:\n",
+    "        for line in file:\n",
+    "            parts = line.split(';')\n",
+    "            if len(parts) > 2:\n",
+    "                try:\n",
+    "                    score = float(parts[2])\n",
+    "                    scores.append(score)\n",
+    "                except ValueError:\n",
+    "                    continue\n",
+    "    print(np.mean(scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9a1dc8a-cdda-4b9d-a4ab-a9aef60473a8",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "87c39e77-ba10-448b-b0a0-90f0525f4bd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.833851128963933\n"
+     ]
+    }
+   ],
+   "source": [
+    "for rr in ['12x']:\n",
+    "    scores = []\n",
+    "    with open(f\"sd3_{rr}.csv\", 'r') as file:\n",
     "        for line in file:\n",
     "            parts = line.split(';')\n",
     "            if len(parts) > 2:\n",
