--- a/FIC/paligemma_docvqa.ipynb
+++ b/FIC/paligemma_docvqa.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f35fde6c7e1496486d158bc5c5f5047",
+       "model_id": "5e93d6098e1845dd9b9f7ee723f39ef0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf59db3df8294631b7323323f24192f7",
+       "model_id": "77910184e9ce4af080054516070746aa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f01fa131d1c8426cb29289f0e64864e1",
+       "model_id": "aad0a8a40d5142c8a750747c7bfc3cb6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
    ],
    "source": [
     "ds = load_dataset(\"danjacobellis/docvqa\",split='test')\n",
-    "model_id = \"google/paligemma-3b-ft-docvqa-224\"\n",
+    "model_id = \"google/paligemma-3b-ft-docvqa-448\"\n",
     "model = PaliGemmaForConditionalGeneration.from_pretrained(\n",
     "    model_id,\n",
     "    torch_dtype=torch.bfloat16,\n",
@@ -153,7 +153,7 @@
        "\n",
        "    <div>\n",
        "      <progress value='5188' class='' max='5188' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [5188/5188 07:07&lt;00:00]\n",
+       "      100.00% [5188/5188 10:56&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -177,7 +177,7 @@
     "scores = []\n",
     "preds = []\n",
     "qid = []\n",
-    "res = 224\n",
+    "res = 448\n",
     "for item in progress_bar(ds):\n",
     "    score, pred = compute_score(item,res)\n",
     "    scores.append(score)\n",
@@ -190,9 +190,7 @@
    "id": "be546396-d3d2-4e5d-a25b-f1cc91d1b828",
    "metadata": {},
    "source": [
-    "7725 MiB\n",
-    "\n",
-    "254% CPU load"
+    "9953 MiB"
    ]
   },
   {
@@ -204,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "12.149882903981265"
+       "7.908536585365853"
       ]
      },
      "execution_count": 5,
@@ -213,7 +211,7 @@
     }
    ],
    "source": [
-    "5188 / (7*60+7)"
+    "5188 / (10*60+56)"
    ]
   },
   {
