--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -134,6 +134,86 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6081e706-d225-4e0c-b7b6-4ae6fcf3ecb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[52]['image']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39faee2b-b4cc-4847-ad86-918f0126c4ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[52]['colorized']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4685df3-7fdf-4ea4-a0ec-384b9ace5154",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[64]['image']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "673ffd69-6f84-46d9-927b-2d9e69d19ccb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[64]['colorized']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7537edb-8ad5-4bd1-ae8e-47a16d2ad7e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[95]['image']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e36b9e7-368c-4a40-a72d-83b832d19b3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[95]['colorized']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "411c1415-e1d4-4add-bb6b-adb54a1534a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[105]['image']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63cb0314-bbe5-4232-827d-5160b1c16dcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds[105]['colorized']"
+   ]
   }
  ],
  "metadata": {
