--- a/train/colorize_table.ipynb
+++ b/train/colorize_table.ipynb
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "9dd51dae-6a66-491d-a654-80cb51e86ad6",
    "metadata": {},
    "outputs": [],
    "source": [
     "methods = [\n",
-    "    \"danjacobellis/LSDIR_colorize_pixels_512_p32\"\n",
+    "    \"danjacobellis/LSDIR_colorize_pixels_512_p32\",\n",
+    "    \"danjacobellis/LSDIR_colorize_pixels_128_p8\"\n",
     "]\n",
     "metrics = [\n",
     "    'time',\n",
@@ -31,13 +32,16 @@
     "    'DISTS_dB',\n",
     "]\n",
     "types = [\n",
+    "    \"Pixels\",\n",
     "    \"Pixels\"\n",
     "]\n",
     "res = [\n",
-    "    512\n",
+    "    512,\n",
+    "    128\n",
     "]\n",
     "patch = [\n",
-    "    32\n",
+    "    32,\n",
+    "    8\n",
     "]\n",
     "columns = [\n",
     "    \"type\",\n",
@@ -48,10 +52,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "6fb122cb-f4d9-4f2f-8056-96c191dc7560",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d09677aefed346d581167ee3dc817549",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "README.md:   0%|          | 0.00/710 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8298c331d7c445f9d2f188d999a3167",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "validation-00000-of-00002.parquet:   0%|          | 0.00/341M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dd8758627c2648a4849aab2e1c5a6d3a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "validation-00001-of-00002.parquet:   0%|          | 0.00/339M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c69b66139db447baae4c86b55dedcb70",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data_rows = []\n",
     "for im, method in enumerate(methods):\n",
@@ -67,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "a66e33de-bc2a-45c2-866c-6a6c8645dcdd",
    "metadata": {},
    "outputs": [
@@ -114,6 +175,17 @@
        "      <td>2.426913</td>\n",
        "      <td>6.225237</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pixels</td>\n",
+       "      <td>128</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.004850</td>\n",
+       "      <td>17.655345</td>\n",
+       "      <td>0.713271</td>\n",
+       "      <td>1.760317</td>\n",
+       "      <td>5.096641</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -121,12 +193,14 @@
       "text/plain": [
        "     type  resolution  patch_size      time       PSNR     MSSIM  LPIPS_dB  \\\n",
        "0  Pixels         512          32  0.004779  18.504796  0.825925  2.426913   \n",
+       "1  Pixels         128           8  0.004850  17.655345  0.713271  1.760317   \n",
        "\n",
        "   DISTS_dB  \n",
-       "0  6.225237  "
+       "0  6.225237  \n",
+       "1  5.096641  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
