--- a/train/colorize_eval.ipynb
+++ b/train/colorize_eval.ipynb
@@ -12,6 +12,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0edb5b21-1d44-4ee7-a24b-b4971a1bc118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://huggingface.co/danjacobellis/LCCL/resolve/main/colorize_pixels_512_p32.pth"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "2b73022d-e3f7-47b8-8fb6-cb7615d1445e",
    "metadata": {},
@@ -183,14 +193,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
+   "id": "eb6f87aa-5bd8-4d1e-96b9-7523d8324de6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def colorize_cpu(sample):\n",
+    "    with torch.no_grad():\n",
+    "        img = sample['image'].convert(\"RGB\")\n",
+    "        y = PILToTensor()(img)\n",
+    "        x = Grayscale(num_output_channels=3)(valid_transform(img))\n",
+    "        x = x.to(torch.float)\n",
+    "        y = y.to(torch.float)\n",
+    "        x = x / 255\n",
+    "        y = y / 255\n",
+    "        x = x.to(device)\n",
+    "        y = y.to(device)\n",
+    "        x = x.unsqueeze(0)\n",
+    "        y = y.unsqueeze(0)\n",
+    "        \n",
+    "        t0 = time.time()\n",
+    "        pred = model(x)\n",
+    "        pred = Resize(size=(img.height, img.width))(pred)\n",
+    "        pred = pred.clamp(0,1)\n",
+    "        elapsed_time = time.time() - t0\n",
+    "        return {\n",
+    "            'time': elapsed_time,\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "66abc20d-95c1-434b-94fa-28e7fdafcf62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a9e2b3bf6b024d119f580aae533d941f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/250 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "device = \"cpu\"\n",
+    "model = model.to(device)\n",
+    "cpu = dataset_valid.map(colorize_cpu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "61ba80a9-20ed-408a-9283-c738ef6aed42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined = colorized.add_column('cpu_time',cpu['time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "7e44fc21-a116-485b-a510-f940b5c54f0b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19e88a2b4fd84d25963cc24798fe40e8",
+       "model_id": "cef38b96036b401a8131935ee6a1c33e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b54b6fc7c9545ba9650e6d059470a60",
+       "model_id": "3a89d098810a494ab6661943b3135a80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "61bf170bce5c4956bc949719f18e13b1",
+       "model_id": "dc67e1ae797b4fd491fb5a0c22f5c56e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +310,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "275da8eabd7942b38c48879bdf9d9ce0",
+       "model_id": "73dda63174f7486297e41f3645fbfbcb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +324,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4ef076dad2f4f7ba6e920ba2f949bc3",
+       "model_id": "e33706387eea480e917f0fe298fa0f05",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,16 +338,16 @@
     {
      "data": {
       "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_pixels_128_p8/commit/c724befe705eb4f478f259e71a5989177be28d01', commit_message='Upload dataset', commit_description='', oid='c724befe705eb4f478f259e71a5989177be28d01', pr_url=None, pr_revision=None, pr_num=None)"
+       "CommitInfo(commit_url='https://huggingface.co/datasets/danjacobellis/LSDIR_colorize_pixels_128_p8/commit/e3b1718ac2868387d8772cb6d8d30109dc4ee0a3', commit_message='Upload dataset', commit_description='', oid='e3b1718ac2868387d8772cb6d8d30109dc4ee0a3', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "colorized.push_to_hub(\"danjacobellis/LSDIR_colorize_pixels_128_p8\", split='validation')"
+    "combined.push_to_hub(\"danjacobellis/LSDIR_colorize_pixels_128_p8\", split='validation')"
    ]
   }
  ],
